# ArtKet

./: .gitignore  .replit  README.md  ai_service.py  app.py  build.sh  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-Build-me-a-full-stack-web-application-called-ArtConnect-an-AI-powered-social-marketplace-for-loc-1758390555218_1758390555227.txt
instance/: artconnect.db
static/css/: style.css
static/images/: README.md
static/js/: app.js
templates/: base.html  cart.html  cart_backup.html  discover.html  feed.html  index.html  login.html  marketplace.html  profile.html  register.html
